# molecular-simulation

./: .gitignore  CMakeLists.txt  main.cpp
1 MD Not Optimized/: globaldata.h  initializer.c  initializer.h  main.c  running.c  running.h  timing.c  timing.h
1 MD Optimized with Verlet/: globaldata.h  initializer.c  initializer.h  main.c  running.c  running.h  timing.c
1 MD Optimized with Verlet and Tabulation/: globaldata.h  initializer.c  main.c  running.c  running.h  tabulator.c  tabulator.h  timing.c
